# macos-window-manager

./: Cargo.toml  README.md
src/: main.rs
src/assets/: mod.rs
src/inputs/: events.rs
src/macos/: apps.rs  mod.rs  permissions.rs  screens.rs
